--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="col-md-12">
                                 <div class="single-post-big">
                                     <div class="big-image">
-                                        <img src="img/m51.jpg" alt="">
+                                        <img src="/img/m51.jpg" alt="">
                                         <br>
                                         <br>
                                         <h5>Sherman M51</h5>
