--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="col-md-12">
                                 <div class="single-post-big">
                                     <div class="big-image">
-                                        <img src="/img/m51.jpg" alt="">
+                                        <img src="m51.jpg" alt="">
                                         <br>
                                         <br>
                                         <h5>Sherman M51</h5>
@@ -196,13 +196,13 @@
                             <div class="col-md-12">
                                 <div class="single-post-big">
                                     <div class="big-image">
-                                        <img src="/img/Bundesarchiv_Bild_183-S34490,_Tankschlacht_bei_Cambrai.jpg" alt="">
+                                        <img src="Bundesarchiv_Bild_183-S34490,_Tankschlacht_bei_Cambrai.jpg" alt="">
                                         <br>
-                                        <img src="/img/Bundesarchiv_Bild_183-R27012,_Bei_Cambrai_erbeuteter_englischer_Panzer.jpg" alt="">
+                                        <img src="Bundesarchiv_Bild_183-R27012,_Bei_Cambrai_erbeuteter_englischer_Panzer.jpg" alt="">
                                         <br>
-                                        <img src="/img/Bundesarchiv_Bild_183-S34490,_Tankschlacht_bei_Cambrai.jpg" alt="">
+                                        <img src="Bundesarchiv_Bild_183-S34490,_Tankschlacht_bei_Cambrai.jpg" alt="">
                                         <br>
-                                        <img src="/img/Little_Willie_early_design.jpg" alt="">
+                                        <img src="Little_Willie_early_design.jpg" alt="">
 
                                     </div>
                                     <div class="big-text">
@@ -237,11 +237,11 @@
                                         <br>
                                         <br>
                                         <br>
-                                        <img src="/img/panzer 4.jpg" alt="">
-                                        <img src="/img/Bundesarchiv_Bild_101I-299-1805-12,_Nordfrankreich,_Panzer_VI_(Tiger_I).jpg" alt="">
-                                        <img src="/img/Yanks_advance_into_a_Belgian_town.jpg" alt="">
-                                        <img src="/img/Bundesarchiv_Bild_101I-268-0185-05A,_Russland,_Panzer_35t.jpg" alt="">
-                                        <img src="/img/КВ-1_у_диорамы_«Прорыв_блокады_Ленинграда»._Вид_спереди-справа.JPG.jpg" alt="">
+                                        <img src="panzer 4.jpg" alt="">
+                                        <img src="Bundesarchiv_Bild_101I-299-1805-12,_Nordfrankreich,_Panzer_VI_(Tiger_I).jpg" alt="">
+                                        <img src="Yanks_advance_into_a_Belgian_town.jpg" alt="">
+                                        <img src="Bundesarchiv_Bild_101I-268-0185-05A,_Russland,_Panzer_35t.jpg" alt="">
+                                        <img src="КВ-1_у_диорамы_«Прорыв_блокады_Ленинграда»._Вид_спереди-справа.JPG.jpg" alt="">
                                         
                                     </div>
                                     <div class="big-text">
@@ -285,10 +285,10 @@
                                         <br>
                                         <br>
                                         <br>
-                                        <img src="/img/220px-M551_Sheridan.jpg" alt="">
-                                        <img src="/img/1920px-Centurion_Tank_outside_the_Redoubt_Fortress.jpg" alt="">
-                                        <img src="/img/M48_Patton_Tank_on_display.jpg" alt="">
-                                        <img src="/img/T-72A_tank_on_parade.jpg" alt="">
+                                        <img src="220px-M551_Sheridan.jpg" alt="">
+                                        <img src="1920px-Centurion_Tank_outside_the_Redoubt_Fortress.jpg" alt="">
+                                        <img src="M48_Patton_Tank_on_display.jpg" alt="">
+                                        <img src="T-72A_tank_on_parade.jpg" alt="">
                                     </div>
                                     <div class="big-text">
                                         <br>
@@ -336,10 +336,10 @@
                                         <br>
                                         <br>
                                         <br>
-                                        <img src="/img/Black_Eagle_Obj640exp.svg.png" alt="">
-                                        <img src="/img/DerelictAsadBabil.JPEG.jpeg" alt="">
-                                        <img src="/img/Leopard_2_A5_der_Bundeswehr.jpg" alt="">
-                                        <img src="/img/1280px-IrakKriegM1A1USA.jpg" alt="">
+                                        <img src="Black_Eagle_Obj640exp.svg.png" alt="">
+                                        <img src="DerelictAsadBabil.JPEG.jpeg" alt="">
+                                        <img src="Leopard_2_A5_der_Bundeswehr.jpg" alt="">
+                                        <img src="1280px-IrakKriegM1A1USA.jpg" alt="">
 
                                     </div>
                                     <div class="big-text">
@@ -381,7 +381,7 @@
                                         <br>
                                         <br>
                                         <br>
-                                        <img src="/img/1920px-Mounted_Soldier_System_(MSS).jpg" alt="">
+                                        <img src="1920px-Mounted_Soldier_System_(MSS).jpg" alt="">
                                        
                                     </div>
                                     <div class="big-text">
