--- a/index.html
+++ b/index.html
@@ -456,7 +456,11 @@
         th {
             background-color: #f2f2f2;
         }
-
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 18px;
+  }
+}
 
     </style>
 </body>
