--- a/index.html
+++ b/index.html
@@ -444,24 +444,57 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/active.js"></script>
     <style>
- table {
+        table {
             width: 100%;
             border-collapse: collapse;
         }
+
         th, td {
             border: 1px solid black;
             padding: 8px;
             text-align: left;
         }
+
         th {
             background-color: #f2f2f2;
         }
-@media screen and (min-width: 768px) {
-  body {
-    font-size: 18px;
-  }
-}
 
+        /* Responsive styles */
+        @media (max-width: 768px) {
+            .header .menu ul {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0;
+            }
+
+            .header .menu ul li {
+                width: 100%;
+            }
+
+            .single-post-big {
+                margin-bottom: 20px;
+            }
+
+            .big-image img {
+                width: 100%;
+                height: auto;
+            }
+
+            .big-text h3, .big-text h5 {
+                text-align: center;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .header .logo h2 {
+                font-size: 24px;
+            }
+
+            .big-text h3, .big-text h5 {
+                font-size: 18px;
+            }
+        }
     </style>
 </body>
 
